@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-09T00:52:33Z",
-  "count_outdated" : 1306,
-  "uniques_outdated" : 313,
+  "timestamp" : "2023-07-09T08:09:07Z",
+  "count_outdated" : 1307,
+  "uniques_outdated" : 314,
   "count" : 1321,
   "uniques" : 320,
   "views" : [
-    {
-      "timestamp": "2023-06-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-28T00:00:00Z",
       "count": 2,
